--- a/Steak Article.Rmd
+++ b/Steak Article.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Steak Preferences in the United States"
 subtitle: "Summary Report for the _**Mountain**_ Region"
-author: "Author: Becky Beagle"
+author: "Author: msboo"
 date: " `r format(Sys.Date(),'%A, %B %d, %Y')`"
 output: html_document
 ---
